Add clear and resize buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    <div id="container"></div>
+    <div class="buttons">
+        <button id="clear-button">Clear</button>
+        <button id="resize-button">Resize Grid</button>
+    </div>
+    <div id="popup-background"></div>
+    <div class ="container"></div>
 </body>
 </html>
