Add a feature for the user to select between random rgb or progressive darkening

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <button id="clear-button">Clear</button>
         <button id="resize-button">Resize Grid</button>
     </div>
+    <label for="color-mode">Color Mode:</label>
+    <select id="color-mode">
+        <option value="random">Random RGB</option>
+        <option value="progressive">Progressive Darkening</option>
+    </select>
     <div id="popup-background"></div>
     <div class ="container"></div>
 </body>
